# co-training

./: cotraining.py  cotraining.sbatch  cotraining.sh  ct_model.py  pretrained_ijepa.py  recalibration.py  run-cotraining.py  utils.py
co-training/: pyproject.toml
co-training/src/cotraining/: ct_model.py  recalibration.py  utils.py
