[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cotraining"
version = "0.0.1"
authors = [
  { name="Jay Rothenberger", email="jay.c.rothenberger@gmail.com" },
  { name="Tiffany Le", email="tiffanyle@ou.edu" },
]
description = "A sample implementation of co-training algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations"
            ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Machine Learning",
]

[project.urls]
Homepage = "https://github.com/JayRothenberger/co-training"
Issues = "https://github.com/JayRothenberger/co-training/issues"